...
          rootUsers: [
            {
              userName: displayName,
              userEmail: `${userId}@users.discard.app`,
              authenticators: [
                {
                  authenticatorName: "Passkey",
                  challenge: attestation.challenge,
                  attestation: {
                    credentialId: attestation.credentialId,
                    clientDataJson: attestation.clientDataJson,
                    attestationObject: attestation.attestationObject,
                    transports: ["internal", "hybrid"],
...
